# HTTP-Server

./: CMakeLists.txt  README.md  conanfile.txt  github-action-script.sh
.github/workflows/: main.yml
cgi/: action-script-launch-test.sh
config/: config.json
include/: Error.hpp
include/Server/: ASocketHandler.hpp  DLLoader.hpp  Error.hpp  HTTPObject.hpp  IModule.hpp  INetwork.hpp  ISocketHandler.hpp  configHandler.hpp  jsonReader.hpp  moduleManager.hpp  moduleType.hpp  pathHandler.hpp  processingList.hpp  requestManager.hpp  serverCore.hpp  tcpConnection.hpp
jsonFiles/: config.json
modules/: CMakeLists.txt
modules/Snake/: CMakeLists.txt
modules/Snake/include/: Coord.hpp  Snake.hpp
modules/Snake/src/: Snake.cpp
modules/phpCgiModule/: CMakeLists.txt  phpCgiModule.cpp
modules/phpCgiModule/include/: phpCgiModule.hpp
modules/phpCgiModule/src/: phpCgiModule.cpp
modules/snakeModule/include/: Snake.hpp
modules/snakeModule/src/: Snake.cpp
modules/sslModule/: CMakeLists.txt
modules/sslModule/include/: sslModule.hpp
modules/sslModule/src/: sslModule.cpp
src/: Error.cpp
src/Server/: ASocketHandler.cpp  Error.cpp  HTTPObject.cpp  configHandler.cpp  jsonReader.cpp  main.cpp  moduleManager.cpp  pathHandler.cpp  processingList.cpp  requestManager.cpp  serverCore.cpp  tcpConnection.cpp
tests/: CMakeLists.txt  testConfigHandler.cpp  testHTTPObject.cpp  testJsonReader.cpp  testPathHandler.cpp  testPhpCgiModule.cpp  testProcessingList.cpp  testSnakeModule.cpp  test_jsonReader.cpp
